Fix filters gap

--- a/css/filters.less
+++ b/css/filters.less
@@ -1,10 +1,10 @@
 #filters {
     background-color: transparent;
     height: 400px;
-    left: 15px;
     overflow-y: auto;
+    padding-left: 15px;
     position: absolute;
-    top: @header-height + 10;
+    top: @header-height;
     width: @filters-width;
     z-index: @interface-z-index;
 
