--- a/css/style.less
+++ b/css/style.less
@@ -2,14 +2,14 @@
 @import "lib/MyFontsWebfontsKit.css";
 
 @logo-color: #BC461B;
-@filters-width: 200px;
+@filters-width: 220px;
 @foreground-color: #443D7E;
 @faded-color: fadeout(@foreground-color, 50%);
 
 @overlay-background-color: rgba(235, 223, 194, 0.9);
 @interface-z-index: 2000;
 
-@header-height: 100px;
+@header-height: 120px;
 // Bump header up so autocomplete suggestions get rendered on top of pages
 @header-z-index: @interface-z-index + 1;
 
